move Makefile for common/images into Applets since it's a Makefile project in VS

--- a/dumbhippo/trunk/client/windows/Applets/Makefile
+++ b/dumbhippo/trunk/client/windows/Applets/Makefile
@@ -1,4 +1,4 @@
-all: *.xml *.css *.png *.js *.gif
+all: *.xml *.css *.png *.js *.gif images
     -mkdir $(OUTDIR)\applets
     copy add.png $(OUTDIR)\applets    
     copy blue*arrow.gif $(OUTDIR)\applets
@@ -34,5 +34,25 @@ all: *.xml *.css *.png *.js *.gif
     copy notification.xml $(OUTDIR)\applets
     copy wbubcnr_*.png $(OUTDIR)\applets
 
+IMGDIR=..\..\common\images
+images:
+	-mkdir $(OUTDIR)\images
+	copy $(IMGDIR)\bar_middle.png $(OUTDIR)\images
+	copy $(IMGDIR)\bar_pipe.png $(OUTDIR)\images
+	copy $(IMGDIR)\bar_x2.png $(OUTDIR)\images
+	copy $(IMGDIR)\bar_x.png $(OUTDIR)\images
+	copy $(IMGDIR)\find.png $(OUTDIR)\images
+	copy $(IMGDIR)\home2.png $(OUTDIR)\images
+	copy $(IMGDIR)\home.png $(OUTDIR)\images
+	copy $(IMGDIR)\hush2.png $(OUTDIR)\images
+	copy $(IMGDIR)\hush.png $(OUTDIR)\images
+	copy $(IMGDIR)\lid.png $(OUTDIR)\images
+	copy $(IMGDIR)\mugshotstacker.png $(OUTDIR)\images
+	copy $(IMGDIR)\photo_icon.png $(OUTDIR)\images
+	copy $(IMGDIR)\search_x.png $(OUTDIR)\images
+	copy $(IMGDIR)\unhush2.png $(OUTDIR)\images
+	copy $(IMGDIR)\unhush.png $(OUTDIR)\images
+
 clean:
 	-deltree $(OUTDIR)\applets
+	-deltree $(OUTDIR)\images
