--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -42,44 +42,23 @@ mugshot_SOURCES	=				\
 	src/main.c				\
 	src/main.h
 
-EMBEDDEDIMAGEDIR=images
+EMBEDDEDIMAGEDIR=$(COMMONSRCDIR)/images
 EMBEDDED_IMAGES=				\
-	$(EMBEDDEDIMAGEDIR)/add.png	\
-	$(EMBEDDEDIMAGEDIR)/bublinkswarm.gif	\
-	$(EMBEDDEDIMAGEDIR)/bubgroupupdate.gif	\
-	$(EMBEDDEDIMAGEDIR)/blueleftarrow.gif	\
-	$(EMBEDDEDIMAGEDIR)/bluerightarrow.gif	\
-	$(EMBEDDEDIMAGEDIR)/chaticon.gif	\
-	$(EMBEDDEDIMAGEDIR)/grayleftarrow.gif	\
-	$(EMBEDDEDIMAGEDIR)/grayrightarrow.gif	\
-	$(EMBEDDEDIMAGEDIR)/ignoreicon.png	\
-	$(EMBEDDEDIMAGEDIR)/nophoto.gif		\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_blmix.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_bl.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_brmix.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_br.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_tlmix.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_tl.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubcnr_tr.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_bmix.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_b.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_lmix.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_l.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_r.png	\
-	$(EMBEDDEDIMAGEDIR)/pbubedge_t.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_blmix.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_bl.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_brmix.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_br.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_tlmix.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_tl.png	\
-	$(EMBEDDEDIMAGEDIR)/obubcnr_tr.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_bmix.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_b.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_lmix.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_l.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_r.png	\
-	$(EMBEDDEDIMAGEDIR)/obubedge_t.png
+	$(EMBEDDEDIMAGEDIR)/bar_middle.png	\
+	$(EMBEDDEDIMAGEDIR)/bar_pipe.png	\
+	$(EMBEDDEDIMAGEDIR)/bar_x2.png		\
+	$(EMBEDDEDIMAGEDIR)/bar_x.png		\
+	$(EMBEDDEDIMAGEDIR)/find.png		\
+	$(EMBEDDEDIMAGEDIR)/home2.png		\
+	$(EMBEDDEDIMAGEDIR)/home.png		\
+	$(EMBEDDEDIMAGEDIR)/hush2.png		\
+	$(EMBEDDEDIMAGEDIR)/hush.png		\
+	$(EMBEDDEDIMAGEDIR)/lid.png		\
+	$(EMBEDDEDIMAGEDIR)/mugshotstacker.png	\
+	$(EMBEDDEDIMAGEDIR)/photo_icon.png	\
+	$(EMBEDDEDIMAGEDIR)/search_x.png	\
+	$(EMBEDDEDIMAGEDIR)/unhush2.png		\
+	$(EMBEDDEDIMAGEDIR)/unhush.png
 
 EMBEDDED_IMAGE_HEADER=$(BUILT_SRC_DIR)/hippo-embedded-image-data.h
 $(EMBEDDED_IMAGE_HEADER):	$(EMBEDDED_IMAGES)
@@ -87,9 +66,9 @@ $(EMBEDDED_IMAGE_HEADER):	$(EMBEDDED_IMAGES)
 	cat </dev/null > $(EMBEDDED_IMAGE_HEADER) || exit 1 ;				\
 	ALL_NAMES="" ;									\
 	for I in $(EMBEDDED_IMAGES); do							\
-	    IMG=$(srcdir)/$$I ;								\
+	    IMG=$$I ;									\
 	    NAME=`echo "$$I" | sed -e 's/.png//g' | sed -e 's/.gif//g'` ;		\
-	    NAME=`echo "$$NAME" | sed -e 's/images\///g'` ;				\
+	    NAME=`basename "$$NAME"` ;							\
 	    echo "Writing embedded image $$IMG with name $$NAME" ;			\
 	    gdk-pixbuf-csource --struct --raw --static "$$IMG"				\
                                 --name="$$NAME"						\
@@ -105,8 +84,16 @@ $(EMBEDDED_IMAGE_HEADER):	$(EMBEDDED_IMAGES)
 	echo '{ NULL, NULL, NULL } };' >> $(EMBEDDED_IMAGE_HEADER) || exit 1
 
 BUILT_SOURCES += $(EMBEDDED_IMAGE_HEADER)
-EXTRA_DIST += $(EMBEDDED_IMAGES)
 MAINTAINERCLEANFILES +=	$(EMBEDDED_IMAGE_HEADER)
+
+## we need to nodist these because otherwise automake would copy 
+## ../common to distdir/../common which puts common outside of distdir.
+## so we handle the disting manually so the destination is always distdir/common-dist
+nodist_mugshot_SOURCES=$(EMBEDDED_IMAGES)
+mugshot-dist-hook:
+	-mkdir $(distdir)/common-dist
+	mkdir $(distdir)/common-dist/images
+	cp $(EMBEDDED_IMAGES) $(distdir)/common-dist/images
 
 desktopfilesdir=$(datadir)/gnome/autostart
 desktopfiles_in_files=mugshot.desktop.in
