--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -146,6 +146,9 @@
 				RelativePath="..\..\common\hippo\hippo-canvas-grip.c">
 			</File>
 			<File
+				RelativePath="..\..\common\canvas\hippo\hippo-canvas-image-button.c">
+			</File>
+			<File
 				RelativePath="..\..\common\canvas\hippo\hippo-canvas-image.c">
 			</File>
 			<File
@@ -265,6 +268,9 @@
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-canvas-grip.h">
+			</File>
+			<File
+				RelativePath="..\..\common\canvas\hippo\hippo-canvas-image-button.h">
 			</File>
 			<File
 				RelativePath="..\..\common\canvas\hippo\hippo-canvas-image.h">
