- Add a simple canvas test in python - Several defs fixes

--- a/dumbhippo/trunk/client/canvas/Makefile-python.am
+++ b/dumbhippo/trunk/client/canvas/Makefile-python.am
@@ -33,6 +33,6 @@ hippocanvas.c: $(PYTHONDEFS_FILES)
 	($(PYGTK_CODEGEN) \
             --register $(PYGTK_DEFSDIR)/gtk-types.defs \
 	    --override $(PYTHONSRCDIR)/hippocanvas.override \
-	    --prefix hippocanvas $(PYTHONSRCDIR)/hippocanvas.defs) > gen-hippocanvas.c \
+	    --prefix pyhippocanvas $(PYTHONSRCDIR)/hippocanvas.defs) > gen-hippocanvas.c \
 	&& cp gen-hippocanvas.c $*.c \
 	&& rm -f gen-hippocanvas.c
