--- a/dumbhippo/trunk/client/canvas/Makefile.am
+++ b/dumbhippo/trunk/client/canvas/Makefile.am
@@ -144,6 +144,7 @@ COMMON_CANVAS_SOURCEFILES = 					\
 
 LINUX_CANVAS_SOURCEFILES =					\
 	$(LINUX_CANVAS_HEADERFILES)				\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas.c		\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-widget.c	\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-widgets.c
 
