--- a/dumbhippo/trunk/client/canvas/Makefile-python.am
+++ b/dumbhippo/trunk/client/canvas/Makefile-python.am
@@ -1,4 +1,4 @@
-hippocanvas_la_CPPFLAGS =	\
+hippo_la_CPPFLAGS =		\
 	$(AM_CPPFLAGS)		\
 	$(PYTHON_INCLUDES)	\
 	$(PYGTK_CFLAGS)		\
@@ -6,33 +6,33 @@ hippocanvas_la_CPPFLAGS =	\
 
 PYTHONSRCDIR=$(top_srcdir)/python
 
-hippocanvasdir = $(pythondir)
-pkgpyexecdir = $(hippocanvasdir)
+hippodir = $(pythondir)
+pkgpyexecdir = $(hippodir)
 
-pkgpyexec_LTLIBRARIES = hippocanvas.la
+pkgpyexec_LTLIBRARIES=hippo.la
 
-hippocanvas_la_LDFLAGS = -module -avoid-version
-hippocanvas_la_LIBADD =					\
-	$(HIPPOCANVAS_LIBS)				\
+hippo_la_LDFLAGS = -module -avoid-version
+hippo_la_LIBADD =					\
+	$(LIBHIPPOCANVAS_LIBS)				\
 	$(top_builddir)/libhippocanvas-1.la
 
-hippocanvas_la_SOURCES = 			\
-	$(PYTHONSRCDIR)/hippocanvasmodule.c
+hippo_la_SOURCES = 				\
+	$(PYTHONSRCDIR)/hippomodule.c
 
-nodist_hippocanvas_la_SOURCES = \
-	hippocanvas.c
+nodist_hippo_la_SOURCES = \
+	hippo.c
 
 PYTHONDEFS_FILES =				\
-	$(PYTHONSRCDIR)/hippocanvas.defs	\
-	$(PYTHONSRCDIR)/hippocanvas.override
+	$(PYTHONSRCDIR)/hippo.defs		\
+	$(PYTHONSRCDIR)/hippo.override
 
-CLEANFILES = hippocanvas.c
+CLEANFILES = hippo.c
 EXTRA_DIST += $(PYTHONDEFS_FILES)
 
-hippocanvas.c: $(PYTHONDEFS_FILES)
+hippo.c: $(PYTHONDEFS_FILES)
 	($(PYGTK_CODEGEN) \
             --register $(PYGTK_DEFSDIR)/gtk-types.defs \
-	    --override $(PYTHONSRCDIR)/hippocanvas.override \
-	    --prefix pyhippocanvas $(PYTHONSRCDIR)/hippocanvas.defs) > gen-hippocanvas.c \
-	&& cp gen-hippocanvas.c $*.c \
-	&& rm -f gen-hippocanvas.c
+	    --override $(PYTHONSRCDIR)/hippo.override \
+	    --prefix pyhippo $(PYTHONSRCDIR)/hippo.defs) > gen-hippo.c \
+	&& cp gen-hippo.c $*.c \
+	&& rm -f gen-hippo.c
