- add chat icon to makefile on windows - move the test canvas item creation to a hippo-canvas-test.c, hippo-canvas-test.h in common/canvas/hippo/hippo-canvas-test.c - make hippo-canvas.c on Linux and HippoUI.cpp on Windows use hippo-canvas-test to open canvas test window - in HippoAbstractWindow.cpp, handle WM_GETMINMAXINFO on newly-created windows to keep Windows from overriding our window size

--- a/dumbhippo/trunk/client/windows/Applets/Makefile
+++ b/dumbhippo/trunk/client/windows/Applets/Makefile
@@ -42,6 +42,7 @@ images:
 	copy $(IMGDIR)\bar_x2.png $(OUTDIR)\images
 	copy $(IMGDIR)\bar_x.png $(OUTDIR)\images
 	copy $(IMGDIR)\blue_x.png $(OUTDIR)\images
+	copy $(IMGDIR)\chat.png $(OUTDIR)\images
 	copy $(IMGDIR)\find.png $(OUTDIR)\images
 	copy $(IMGDIR)\home2.png $(OUTDIR)\images
 	copy $(IMGDIR)\home.png $(OUTDIR)\images
