- add hippo-canvas-test.[hc] to Makefile.am - remove all HIPPO_PACK_EXPAND on ellipsized text items, since box will now expand to natural width regardless and we don't want the extra padding - put spaces around the dash between chat messages and person's name

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -55,6 +55,8 @@ CANVAS_SOURCEFILES = 						\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-item.h		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-link.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-link.h		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-test.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-test.h		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-text.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-text.h		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-widgets.h		\
